--- a/presentation/src/main/res/layout/activity_pick.xml
+++ b/presentation/src/main/res/layout/activity_pick.xml
@@ -5,33 +5,40 @@
     android:id="@+id/activity_pick"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
     tools:context="xyz.gonzapico.cabifytt.PickActivity">
 
   <LinearLayout
-      android:orientation="horizontal"
       android:layout_width="match_parent"
-      android:layout_height="wrap_content">
+      android:layout_height="wrap_content"
+      android:orientation="horizontal">
 
-    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pick_start"/>
+    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
+        android:text="@string/pick_start"/>
 
-    <EditText android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/etStart"/>
+    <EditText android:id="@+id/etStart" android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
   </LinearLayout>
 
   <LinearLayout
-      android:orientation="horizontal"
       android:layout_width="match_parent"
-      android:layout_height="wrap_content">
+      android:layout_height="wrap_content"
+      android:orientation="horizontal">
 
-    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pick_end"/>
+    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
+        android:text="@string/pick_end"/>
 
-    <EditText android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/etEnd"/>
+    <EditText android:id="@+id/etEnd" android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
   </LinearLayout>
+
+  <Button android:id="@+id/btSearch" android:layout_width="wrap_content"
+      android:layout_height="wrap_content" android:text="@string/pick_search"/>
 
 </LinearLayout>
