--- a/presentation/src/main/res/layout/activity_pick.xml
+++ b/presentation/src/main/res/layout/activity_pick.xml
@@ -2,7 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_pick"
+    android:id="@+id/llGlobalPick"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -11,6 +11,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="xyz.gonzapico.cabifytt.PickActivity">
+
 
   <LinearLayout
       android:layout_width="match_parent"
@@ -38,7 +39,21 @@
 
   </LinearLayout>
 
-  <Button android:id="@+id/btSearch" android:layout_width="wrap_content"
+  <Button
+      android:layout_gravity="right"
+      android:id="@+id/btSearch" android:layout_width="wrap_content"
       android:layout_height="wrap_content" android:text="@string/pick_search"/>
+
+  <ProgressBar
+      android:id="@+id/pbLoading"
+      style="@android:style/Widget.ProgressBar.Large"
+      android:visibility="gone"
+      android:layout_width="wrap_content" android:layout_height="wrap_content"
+      android:layout_gravity="center"/>
+
+  <android.support.v7.widget.RecyclerView
+      android:id="@+id/rvEstimateVehicles"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"/>
 
 </LinearLayout>
